--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,7 +47,7 @@ a.navbar-item.is-active {
 
     &::before {
         filter: blur(0.15rem);
-        background-image: url('./assert/yzq winner-image.jpeg');
+        background-image: url('https://gy5630.github.io/HUMA5630.github.io/');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
