--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@ layout: compress
   (function () { /* DON'T EDIT BELOW THIS LINE */
     var d = document,
       s = d.createElement('script');
-    s.src = 'https://{{site.disqus-shortname}}.disqus.com/embed.js';
+    s.src = 'https://oscarsracial.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
   })();
